# qr-generator

./: .gitignore  README.md  pyproject.toml
src/qr_generator/: __init__.py  cli.py  formatters.py  generator.py  history.py  validator.py
