[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qr-generator"
version = "1.0.0"
description = "A CLI tool for generating QR codes with strict validation and global history"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["qr", "qrcode", "cli", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "qrcode[pil]>=7.4",
    "validators>=0.22",
]

[project.scripts]
qr = "qr_generator.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/qr_generator"]

